--- a/_sass/_pages.scss
+++ b/_sass/_pages.scss
@@ -160,6 +160,10 @@ img.home-partners-icon {
 	font-size: 2.625rem;
 }
 
+.relevant-documents p {
+	font-weight: 800 !important;
+}
+
 section#pre-auth, section#during-auth, section#post-auth, section#support, section#do-once {
 	padding: 0 0 40px 130px;
 	margin: 0 0 40px 0;
